# rust-from-iter-derive

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile
.cargo/: config.toml
src/: lib.rs
tests/: test.rs  test_from_map.rs  test_struct_from_iter.rs
