[package]
name = "from-map-derive"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "fat"
#panic = "abort"
overflow-checks = true
rpath = true

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = "thin"
#panic = "abort"
codegen-units = 1
overflow-checks = true
rpath = true

[lints.rust]
async_fn_in_trait = "allow"
hidden_glob_reexports = "allow"
static_mut_refs = "allow"

[lints.clippy]
bool_comparison = "allow"
bool_assert_comparison = "allow"
needless_return = "allow"
expect_fun_call = "allow"
tabs_in_doc_comments = "allow"
missing_safety_doc = "allow"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.94"
libc-print = "0.1"
